# L

./: L.cabal  stack.yaml
auxiliaries/syntax/: L.vim
compiler/: Main.hs
examples/: Bool.l  Expr.l  HOF-buggy.l  HOF.l  List.l  Nat.il  Nat.l  NatNested.l  Tree.l
examples/CantDo/: NatNested.l
grammar/: L.cf  Makefile
grammar/L/: Abs.hs  ErrM.hs  Lex.hs  Par.hs  Print.hs  Skel.hs
src/L/: Axiomatisation.hs  CoreLanguage.hs  Eval.hs  FunctionSymbols.hs  Normalisation.hs  TAbs.hs  TypeCheck.hs
