name:                L
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/L#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, grammar
  exposed-modules:     L.CoreLanguage
                     , L.Axiomatisation
                     , L.TypeCheck
                     , L.Abs
                     , L.ErrM
                     , L.Lex
                     , L.Par
                     , L.Print
                     , L.Skel
  build-depends:       base >= 4.7 && < 5
                     , twee-lib == 2.1.3
                     , mtl
                     , containers
                     , array
  default-language:    Haskell2010

executable lc
  main-is: Main.hs
  hs-source-dirs:
      compiler 
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      L
    , base >=4.7 && <5
    , twee-lib == 2.1.3
    , mtl
  other-modules:
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/L
